# it-poker-bot

./: .gitignore  Cargo.toml  settings_example.yaml
core/: Cargo.toml
src/: main.rs  settings.rs
