[package]
name = "it-poker-bot"
version = "0.1.0"
authors = ["lazymechanic"]
edition = "2018"

[workspace]
members = ["core"]

[dependencies]
anyhow = "1.0"
config = "0.10"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
env_logger = "0.8"
tokio = { version = "0.3", features = ["full"] }
log = { version = "0.4", features = ["std", "serde"] }