[package]
name = "it-poker-bot"
version = "0.1.0"
authors = ["lazymechanic"]
edition = "2018"

[workspace]
members = ["core"]

[dependencies]
anyhow = "1.0"
config = "0.10"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
pretty_env_logger = "0.4"
tokio = { version = "0.2", features = ["full"] }
teloxide = "0.3"
teloxide-macros = "0.3"
log = { version = "0.4", features = ["std", "serde"] }